# mobile_robot_planning_n_navigation

./: CMakeLists.txt  README.md  SOLUTION.md  docker-compose.nvidia.yml  docker-compose.yml  package.xml
configs/localization/: ekf_global.yaml  ekf_local.yaml  navsat.yaml
configs/movebase/: cmd_vel_to_ackermann_drive.yaml  costmap_common_params.yaml  global_costmap_params_map.yaml  global_costmap_params_no_map_for_gps.yaml  local_costmap_params.yaml  move_base_flex.yaml  sbpl_global_planner_params.yaml  teb_local_planner_params_for_gps.yaml
configs/movebase/primitives/: ackermann2.m  rbcar_04.mprim  rbcar_05.mprim  rbcar_06.mprim  rbcar_08.mprim  rbcar_10.mprim
configs/rtabmap/: rtabmap.yaml
roslaunch/: brain.launch  localization.launch  move_base.launch  rtab_odom_from_rbcar.launch  rtabmap.launch  rviz.launch  spawn_camera.launch  start.launch  test.launch  transform_pc2.launch
rviz/: rbcar.rviz
scripts/: brain.py  camera.py  cmd_vel_to_ackermann_drive.py  example.py  fix_odom_topic.py  kill_shit_odom.py  take_a_photo.py
src/: example.cpp  transform_pc2.cpp
